--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             if (panel.style.display === "block") {
               panel.style.display = "none";
             } else {
-              panel.style.display = "block";
+              panel.style.display = "blank";
             }
           });
         }
